--- a/backend/src/main/resources/mail/messages_en.properties
+++ b/backend/src/main/resources/mail/messages_en.properties
@@ -4,4 +4,4 @@ MAIL_REGIST_SUBJECT=[VNPT IoT Platform] Confirm account
 
 #forget password
 MAIL_FORGET_PASS_TEMPLATE=mail/reset_pass_en.txt
-MAIL_FORGET_PASS_SUBJECT=[VNPT IoT Platform] Reset your login password
+MAIL_FORGET_PASS_SUBJECT=[VNPT IoT Platform] Reset your auth password
